<resources>
    <string name="app_name">Individual Assignment</string>
    <string name="welcome_to_maths_game">Welcome to Maths Game!</string>
    <string name="welcome_text">Welcome Text</string>
    <string name="please_select_a_mode">Please select a mode:</string>
    <string name="compare">Compare</string>
    <string name="order">Order</string>
    <string name="compose">Compose</string>
    <string name="compare_numbers">Compare Numbers</string>
    <string name="please_select_a_bigger_number">Please select a bigger number</string>
    <string name="please_select_a_smaller_number">Please select a smaller number</string>
    <string name="wrong" />
    <string name="correct" />
    <string name="button">Button</string>
    <string name="back_to_home">Back to home</string>
    <string name="please_select_a_random_number">Please select a Random number</string>
    <string name="please_compose_the_shown_number">Please compose the shown number</string>
    <string name="compose_numbers">Compose Numbers</string>
    <string name="number1">number</string>
    <string name="number2">number</string>
    <string name="OperationSym">X</string>
    <string name="submit">Submit</string>
    <string name="QuestionNumber">Number</string>
    <string name="order_numbers">Order Numbers</string>
    <string name="please_arrange_the_shown_numbers_in_xxxxxxxxxx_order">Please arrange the shown numbers in xxxxxxxxxx order</string>
    <string name="please_select_the_numbers_in_ascending_order">Please arrange the shown numbers in ascending order</string>
    <string name="please_select_the_numbers_in_descending_order">Please arrange the shown numbers in descending order</string>
    <string name="NumPlaceholder">XX</string>
</resources>