<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:contentDescription="@string/welcome_text"
        android:text="@string/welcome_to_maths_game"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="204dp"
        android:layout_height="64dp"
        android:text="@string/please_select_a_mode"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="260dp"
        android:layoutMode="opticalBounds"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876">

        <Button
            android:id="@+id/button4"
            android:layout_width="270dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/compare" />

        <Button
            android:id="@+id/button2"
            android:layout_width="270dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/order" />

        <Button
            android:id="@+id/button3"
            android:layout_width="270dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/compose" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>