<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5CAE9"
    tools:context=".Compose">

    <TextView
        android:id="@+id/ComposeTitle"
        android:layout_width="156dp"
        android:layout_height="86dp"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/compose_numbers"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/ComposeQuestion"
        android:layout_width="296dp"
        android:layout_height="84dp"
        android:text="@string/please_compose_the_shown_number"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="60dp"
        android:text="@string/QuestionNumber"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/Input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Input1"
        android:layout_width="120dp"
        android:layout_height="49dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="124dp"
        android:ems="10"
        android:hint="@string/number1"
        android:inputType="number"
        android:maxLength="3"
        android:textColorHint="#01579B"
        app:layout_constraintBottom_toTopOf="@+id/BackButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/OperationSym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/OperationSym"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/SubmitButton"
        app:layout_constraintEnd_toStartOf="@+id/Input2"
        app:layout_constraintStart_toEndOf="@+id/Input1" />

    <EditText
        android:id="@+id/Input2"
        android:layout_width="120dp"
        android:layout_height="49dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="124dp"
        android:ems="10"
        android:hint="@string/number2"
        android:inputType="number"
        android:maxLength="3"
        android:singleLine="true"
        android:textColorHint="#01579B"
        app:layout_constraintBottom_toTopOf="@+id/BackButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/SubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="60dp"
        android:text="@string/submit"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/BackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="43dp"
        android:text="@string/back_to_home"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ComposeQuestion"
        app:layout_constraintVertical_bias="0.797" />

</androidx.constraintlayout.widget.ConstraintLayout>